syntax = "proto3";

package customer;

option go_package = "proto/customer;customer";

service Customer {
    rpc CreateCustomer(CreateUserRequest) returns (CreateUserResponse);
    rpc SubmitOrder(SubmitOrderRequest) returns (SubmitOrderResponse);
    rpc GetUnpaidOrders(GetUnpaidOrdersRequest) returns (GetUnpaidOrdersResponse);
    rpc DeactivateCustomer(DeactivateUserRequest) returns (DeactivateUserResponse);
    rpc ActivateUser(ActivateUserRequest) returns (ActivateUserResponse);
}

message CreateUserRequest {
    string customer_name = 1;
}

message CreateUserResponse {
    uint64 customer_id = 1;
    string status = 2;
}

message SubmitOrderRequest {
    uint64 customer_id = 1;
    repeated OrderItem order_items = 2;
}

message SubmitOrderResponse {
    bool success = 1;
    string message = 2;
}

message OrderItem {
    string product_code = 1;
    float unit_price = 2;
    int32 quantity = 3;
}

message GetUnpaidOrdersRequest {
    uint64 customer_id = 1;
}

message GetUnpaidOrdersResponse {
    repeated Order unpaid_orders = 1;
}

message Order {
    uint64 order_id = 1;
    repeated OrderItem items = 2;
    string status = 3;
}

message DeactivateUserRequest {
    uint64 customer_id = 1;
}

message DeactivateUserResponse {
    string status = 1;
}

message ActivateUserRequest {
    uint64 customer_id = 1;
}

message ActivateUserResponse {
    string status = 1;
}
